kubernetes/prod/app-prod-deployment-fast-api.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: baywatch-prod-fast-api-deployment
  labels:
    app: baywatch-prod-fast-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: baywatch-prod-fast-api
  template:
    metadata:
      labels:
        app: baywatch-prod-fast-api
    spec:
      containers:
        - name: baywatch-prod-fast-api
          imagePullPolicy: Always
          image: aravp4/baywatch_api:1.0
          ports:
          - name: http
            containerPort: 8000
