kubernetes/prod/app-prod-deployment-worker.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: baywatch-prod-worker-deployment
  labels:
    app: baywatch-prod-worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: baywatch-prod-worker
  template:
    metadata:
      labels:
        app: baywatch-prod-worker
    spec:
      containers:
        - name: baywatch-prod-worker
          imagePullPolicy: Always
          image: aravp4/baywatch_api:1.0
          command: ["uv", "run", "--", "python", "worker.py"]
