kubernetes/prod/app-prod-service-fast-api.yml

apiVersion: v1
kind: Service
metadata:
  name: baywatch-prod-fast-api-service
spec:
  type: ClusterIP
  selector:
    app: baywatch-prod-fast-api
  ports:
  - name: baywatch-prod-fast-api
    port: 8000
    targetPort: 8000
