kubernetes/prod/app-prod-service-nodeport-fast-api.yml
kind: Service
apiVersion: v1
metadata:
  name: baywatch-prod-fast-api-nodeport-service
spec:
  type: NodePort
  selector:
    app: baywatch-prod-fast-api
  ports:
    - port: 8000
      targetPort: 8000
