kubernetes/prod/app-prod-service-redis.yml
---
apiVersion: v1
kind: Service
metadata:
  name: baywatch-prod-redis-service
spec:
  type: ClusterIP
  selector:
    app: baywatch-prod-redis
  ports:
  - name: baywatch-prod-redis
    port: 6379
    targetPort: 6379
